--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/graphics/
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,java,intellij,maven
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,intellij,maven
