--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ru.spbstu.fxdrums.Main</mainClass>
+                                    <mainClass>ru.spbstu.shortestmazepath.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
